--- a/samboni-astro/package.json
+++ b/samboni-astro/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.4"
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.16.4",
+    "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "daisyui": "^5.5.14"
   }
 }
